--- a/trunk/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
@@ -26,7 +26,7 @@ ssf.secure.port=8443
 ##
 
 # Default repository service
-default.repository.service=internalWebdavRepositoryService
+default.repository.service=fileRepositoryService
 
 
 # Site-level root directory for data (used for storing lucene index and file attachments, etc.)
@@ -35,3 +35,16 @@ data.root.dir=/home/sitescape/
 # Default width and height for generated thumbnails.
 thumbnail.max.width=100
 thumbnail.max.height=100
+
+##
+## Web/Portal Authentication
+##
+
+# If set to true, the password in the SSF user database is automatically
+# synchronized to the password in the portal user database that the user
+# used to log into the portal successfully. This synchronization occurs
+# at the time of successful user login. If false, the password should be 
+# synchronized manually via some other means, and if the two passwords
+# do not match at the time of login, the user is denied access to SSF.
+portal.password.auto.synchronize=true
+
