--- a/trunk/ssf/samples/remotingclient/build.xml
+++ b/trunk/ssf/samples/remotingclient/build.xml
@@ -15,6 +15,7 @@
 		<path id="wsclient.project.classpath">
 			<pathelement path="${classes.dir};${project.dir}/remoting/classes" />
 			<pathelement location="${project.dir}/lib/activation.jar" />
+			<pathelement location="${project.dir}/lib/mail.jar" />
 			<pathelement location="${project.dir}/lib/dom4j.jar" />
 			<pathelement location="${project.dir}/lib/spring.jar" />
 			<pathelement location="${project.dir}/lib/axis.jar" />
@@ -103,8 +104,25 @@
 			dir="${basedir}"
 			failonerror="true">
 			<jvmarg value="-Daxis.ClientConfigFile=client_deploy.wsdd"/>
+			<arg value="read"/>
 			<arg value="74"/>
 			<arg value="482"/>
+		</java>
+	</target>
+	
+	<target name="addEntryGenerated" depends="compile">
+		<java 
+			classname="com.sitescape.ef.samples.remoting.client.ws.jaxrpc.FacadeClient"
+			classpath="${classes.dir}"
+			classpathref="wsclient.project.classpath"
+			fork="true"
+			dir="${basedir}"
+			failonerror="true">
+			<jvmarg value="-Daxis.ClientConfigFile=client_deploy.wsdd"/>
+			<arg value="add"/>
+			<arg value="74"/>
+			<!-- id of "discussion" definition -->
+			<arg value="402883cc08da22a50108da5a83260002"/>
 		</java>
 	</target>
 	
